--- a/README
+++ b/README
@@ -1,5 +1,14 @@
 FoxOS is a new operating system featuring foxes
 
+Prerequisites
+-------------
+
+On MacOSX:
+1- Start by installing homebrew
+2- Run: brew install homebrew/dupes/make --with-default-names
+3- Run: brew install libmpc
+4- Run: brew install grubloader
+
 To configure:
 -------------
 
